# ubuntu-claude-desktop

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
scripts/: make-gifs.sh  take-screenshots.sh
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  computer_use.rs  db.rs  dbus_service.rs  lib.rs  main.rs  mcp.rs  providers.rs
src/lib/: ArtifactPanel.svelte  ArtifactPreview.svelte  Chat.svelte  CommandPalette.svelte  ComputerUseView.svelte  ExtensionsView.svelte  MessageBubble.svelte  QuickAsk.svelte  Settings.svelte  Sidebar.svelte  highlight.js
src/lib/artifacts/: CodeRenderer.svelte  HtmlRenderer.svelte  MarkdownRenderer.svelte  MermaidRenderer.svelte  ReactRenderer.svelte  VersionHistory.svelte
src/styles/: global.css
