[package]
name = "ubuntu-claude-desktop"
version = "0.3.9"
edition = "2021"

[lib]
name = "ubuntu_claude_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ubuntu-claude-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
